CLIENT/CodeAssessMetadata/main/default/objects/CandidateQuestionResult__c/CandidateQuestionResult__c.object-meta.xml
<CustomObject>
    <label>CandidateQuestionResult</label>
    <nameField>
        <displayFormat>Question Result {000000000}</displayFormat>
        <label>Question Result Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CandidateQuestionResults</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>