CLIENT/CodeAssessMetadata/main/default/objects/CandidateQuestionResult__c/fields/CandidateResult__c.field-meta.xml
<CustomField>
    <fullName>CandidateResult__c</fullName>
    <label>CandidateResult</label>
    <referenceTo>CandidateResult__c</referenceTo>
    <relationshipName>QuestionResults</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>