CLIENT/CodeAssessMetadata/main/default/objects/CandidateQuestionResult__c/fields/MethodsSkipped__c.field-meta.xml
<CustomField>
    <fullName>MethodsSkipped__c</fullName>
    <label>Methods Skipped</label>
    <summaryFilterItems>
        <field>CandidateMethodResult__c.Outcome__c</field>
        <operation>equals</operation>
        <value>Skip</value>
    </summaryFilterItems>
    <summaryForeignKey>CandidateMethodResult__c.CandidateQuestionResult__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>