CLIENT/CodeAssessMetadata/main/default/objects/CandidateQuestionResult__c/fields/Result__c.field-meta.xml
<CustomField>
    <fullName>Result__c</fullName>
    <label>Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Result_Status</valueSetName>
    </valueSet>
</CustomField>