CLIENT/CodeAssessMetadata/main/default/objects/CandidateQuestionResult__c/fields/SubmitTime__c.field-meta.xml
<CustomField>
    <fullName>SubmitTime__c</fullName>
    <label>Submit Time</label>
    <type>DateTime</type>
</CustomField>