CLIENT/CodeAssessMetadata/main/default/objects/CandidateQuestionResult__c/fields/TotalMethods__c.field-meta.xml
<CustomField>
    <fullName>TotalMethods__c</fullName>
    <label>Total Methods</label>
    <summaryForeignKey>CandidateMethodResult__c.CandidateQuestionResult__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>